replacing dependency for autocomplete

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -5,7 +5,7 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.8.2/css/all.css" integrity="sha384-xVVam1KS4+Qt2OrFa+VdRUoXygyKIuNWUUUBZYv+n27STsJ7oDOHJgfF0bNKLMJF" crossorigin="anonymous">
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBigYllp4tNO7aH6-CXGdx03AWDUHvgaBs&libraries=places"></script>
+    <script src="http://maps.googleapis.com/maps/api/js?libraries=places&key=AIzaSyBigYllp4tNO7aH6-CXGdx03AWDUHvgaBs"></script>
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
