--- a/client/public/index.html
+++ b/client/public/index.html
@@ -11,7 +11,7 @@
       integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
       crossorigin="anonymous"
     />
-    <script async defer src="https://maps.googleapis.com/maps/api/js?libraries=places&key=AIzaSyBigYllp4tNO7aH6-CXGdx03AWDUHvgaBs"></script>
+    <script async defer src="https://maps.googleapis.com/maps/api/js?libraries=places&country:us&key=AIzaSyBigYllp4tNO7aH6-CXGdx03AWDUHvgaBs"></script>
     <link href="https://fonts.googleapis.com/css2?family=Varela+Round&display=swap" rel="stylesheet">
     <meta name="theme-color" content="#000000" />
     <meta
